--- a/bootstrap_files/portfolio-item.css
+++ b/bootstrap_files/portfolio-item.css
@@ -10,14 +10,19 @@ body {
 
 @media (min-width: 992px) {
   body {
+      
     /*-- padding-top: 56px; */
-    padding-top: 5%;
-    padding-bottom: 1%;
+    padding-top: 10%;
+    padding-bottom: 10%;
     padding-left: 0%;
     padding-right: 0%;
     
 
   }
+}
+
+.scroll{
+    position: fixed;
 }
 
 
@@ -55,4 +60,4 @@ body {
     border-radius: 5px;
     text-align: center;
 }
-}
+
