--- a/bootstrap_files/portfolio-item.css
+++ b/bootstrap_files/portfolio-item.css
@@ -11,11 +11,11 @@ body {
 @media (min-width: 992px) {
   body {
       
-    /*-- padding-top: 56px; */
-    padding-top: 10%;
-    padding-bottom: 10%;
-    padding-left: 0%;
-    padding-right: 0%;
+    /*padding-top: 56px;*/
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     
 
   }
@@ -26,7 +26,7 @@ body {
 }
 
 
-/* Prev buttons */
+/* Prev buttons
 .prev {
         position: absolute;
         top: 50%;
@@ -42,9 +42,10 @@ body {
         border-radius: 5px;
         text-align: center;
     }
+*/
 
 
-/* Where to put the next button */
+/* Where to put the next button
 .next {
     position: absolute;
     top: 50%;
@@ -60,4 +61,5 @@ body {
     border-radius: 5px;
     text-align: center;
 }
+*/
 
