--- a/bootstrap_files/portfolio-item.css
+++ b/bootstrap_files/portfolio-item.css
@@ -26,6 +26,11 @@ body {
 }
 
 
+.my-title{
+    position: absolute;
+    top: 50%;
+    left: 50;padding: 12px 24px;}
+
 /* Prev buttons
 .prev {
         position: absolute;
